--- a/src/main.css
+++ b/src/main.css
@@ -1,66 +1,91 @@
 .pending-questions {
     font-size: 16px;
     line-height: 20px;
-    opacity: 0;
-    transition: all .5s;
+    transition: bottom .4s;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,.2);
-    font-family: Roboto, Helvetica, Tahoma, sans-serif;
-    position: relative;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.24);
+    font-family: Helvetica;
+    background-color: #fffceb;
+    position: fixed;
+    right: 20px;
+    bottom: -81px;
+    border-radius: 3px;
+    padding: 13px 17px;
+    box-sizing: border-box;
+    cursor: pointer;
+    width: 305px;
 }
-.pending-questions__body {
-    background: #FFF;
-    padding: 20px;
+.pending-questions__text {
+    font-size: 14px;
+    font-weight: bold;
+    white-space: nowrap;
 }
-.pending-questions_animation-in {
-    opacity: 1;
+.pending-questions__text:after {
+    content: '';
+    background: url('./arrow.svg') no-repeat;
+    width: 17px;
+    height: 9px;
+    display: inline-block;
+    margin-left: 8px;
 }
 .pending-questions__button {
-    background: #349cb8;
-    width: 100%;
     display: block;
-    font-size: 16px;
-    font-weight: 400;
+    width: 100%;
+    font-size: 14px;
+    font-weight: bold;
     clear: both;
     text-align: center;
-    border-radius: 5px;
     margin: 15px 0px;
-    padding: 20px 10px;
+    padding: 13px 21px;
     box-sizing: border-box;
     text-transform: uppercase;
     color: #ffffff;
+    border-radius: 3px;
+    background-color: #ef7026;
     appearance: none;
+    visibility: hidden;
 }
 .pending-questions__toggler {
-    position: absolute;
-    right: 15px;
-    width: 35px;
-    height: 20px;
-    background: #FFF;
-    top: -20px;
-    box-shadow: 1px -1px 2px 0px rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+
+    display: none;
 }
 .pending-questions__toggler-icon {
     position: relative;
 }
 .pending-questions__toggler:before {
     content: '';
-    background: url('./arrow.png') no-repeat;
-    width: 20px;
-    height: 18px;
+    background: url('./arrow.svg') no-repeat;
+    width: 17px;
+    height: 9px;
     display: block;
     background-size: 100%;
     background-position: top left;
     position: relative;
-}
-.pending-questions_collapsed .pending-questions__toggler:before {
     transform: rotate(180deg);
-    top: 3px;
 }
-.pending-questions_collapsed .pending-questions__body {
-    display: none;
+.pending-questions_expanded {
+    bottom: 0;
+    cursor: default;;
+}
+.pending-questions_expanded .pending-questions__button {
+    visibility: visible;
+}
+.pending-questions_expanded .pending-questions__text:after {
+    content: none;
+}
+.pending-questions_expanded .pending-questions__toggler {
+    position: absolute;
+    right: 15px;
+    width: 35px;
+    height: 20px;
+    top: -20px;
+    box-shadow: 1px -1px 2px 0px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: #fffceb;
+}
+.pending-questions_expanded .pending-questions__toggler:before {
+
 }
