--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
 .pending-questions {
     font-size: 16px;
     line-height: 20px;
-    transition: bottom .4s;
+    transition: all .4s;
     border-radius: 5px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.24);
     font-family: Helvetica;
@@ -19,12 +19,14 @@
     font-size: 14px;
     font-weight: bold;
     white-space: nowrap;
+    display: flex;
+    align-items: center;
 }
 .pending-questions__text:after {
     content: '';
-    background: url('./arrow.svg') no-repeat;
-    width: 17px;
-    height: 9px;
+    background: url('./arrow.svg') no-repeat center;
+    width: 12px;
+    height: 7px;
     display: inline-block;
     margin-left: 8px;
 }
@@ -54,12 +56,10 @@
 }
 .pending-questions__toggler:before {
     content: '';
-    background: url('./arrow.svg') no-repeat;
-    width: 17px;
-    height: 9px;
+    background: url('./arrow.svg') no-repeat center;
+    width: 12px;
+    height: 7px;
     display: block;
-    background-size: 100%;
-    background-position: top left;
     position: relative;
     transform: rotate(180deg);
 }
