--- a/src/libs/styles.css
+++ b/src/libs/styles.css
@@ -5,7 +5,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.24);
     font-family: Helvetica;
-
+    z-index: 1000;
     position: fixed;
     right: 20px;
     bottom: -81px;
