--- a/src/libs/styles.css
+++ b/src/libs/styles.css
@@ -26,6 +26,7 @@
     white-space: nowrap;
     display: flex;
     align-items: center;
+    margin: 0px;
 }
 .pending-questions__text:after {
     content: '';
@@ -35,7 +36,7 @@
     display: inline-block;
     margin-left: 8px;
 }
-.pending-questions__button {
+a.pending-questions__button {
     display: block;
     width: 100%;
     font-size: 14px;
